--- a/package.json
+++ b/package.json
@@ -27,7 +27,16 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "d3-selection": "^2.0.0"
+    "d3": "^6.5.0",
+    "d3-color-legend": "^1.3.1",
+    "d3-selection": "^2.0.0",
+    "intersection-observer": "^0.12.0",
+    "scrollama": "^2.2.1",
+    "stickyfill": "^1.1.1-strict",
+    "topojson": "^3.0.2",
+    "vega": "^5.19.1",
+    "vega-embed": "^6.15.2",
+    "vega-lite": "^5.0.0"
   },
   "scripts": {
     "start": "webpack-dev-server",
